--- a/Android Application/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/Android Application/app/src/main/res/layout/activity_forgetpassword.xml
@@ -68,7 +68,7 @@
                         <EditText
                             android:id="@+id/email"
                             style="@style/modifiedEditText"
-                            android:hint="@string/login_email_hint"
+                            android:hint="Email*"
                             android:inputType="textEmailAddress"
                             android:maxLines="1"
                             android:textStyle="bold" />
