--- a/Android Application/app/src/main/res/layout/activity_login.xml
+++ b/Android Application/app/src/main/res/layout/activity_login.xml
@@ -51,25 +51,41 @@
                 <EditText
                     android:id="@+id/email"
                     style="@style/modifiedEditText"
-                    android:hint="@string/login_email_hint"
+                    android:hint="Email*"
+                    android:textSize="14dp"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputPassword"
-                style="@style/parent"
-                android:layout_marginTop="@dimen/loginViewsMargin">
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
 
                 <EditText
                     android:id="@+id/pass"
                     style="@style/modifiedEditText"
-                    android:hint="@string/login_password_hint"
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp"
+                    android:hint="Password*"
                     android:inputType="textPassword"
-                    android:maxLines="1"
+                    android:text=""
+                    android:textSize="14dp"
                     android:textStyle="bold" />
-            </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageView
+                    android:id="@+id/show_pass_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp"
+                    android:alpha=".5"
+                    android:onClick="ShowHidePass"
+                    android:padding="5dp"
+                    android:src="@drawable/eye" />
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/forget"
