--- a/Android Application/app/src/main/res/layout/activity_profilepage.xml
+++ b/Android Application/app/src/main/res/layout/activity_profilepage.xml
@@ -28,28 +28,20 @@
             android:padding="10dp"
             android:src="@drawable/ic_arrow_back" />
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Profile"
+            android:gravity="center"
             android:textColor="@color/whiteTextColor"
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
 
-        <RelativeLayout
-            android:layout_width="50dp"
-            android:layout_height="50dp">
-        </RelativeLayout>
+
+
 
     </LinearLayout>
 
@@ -82,12 +74,14 @@
                 android:padding="16dp">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/circleImageView"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     app:cardCornerRadius="90dp"
                     app:cardElevation="0dp">
 
                     <ImageView
+                        android:id="@+id/accountimage"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:layout_gravity="center"
@@ -107,8 +101,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:fontFamily="@font/calibri"
-                        android:textColor="#424242"
                         android:text="Basit Ali"
+                        android:textColor="#424242"
                         android:textSize="21sp"
                         android:textStyle="bold" />
 
@@ -126,8 +120,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
 
 
                 <LinearLayout
@@ -186,8 +180,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
-                            android:text="1"
                             android:paddingRight="120dp"
+                            android:text="1"
                             android:textColor="@color/register_bk_color"
                             android:textSize="30dp"
                             android:textStyle="bold" />
@@ -225,10 +219,6 @@
                             android:textSize="17sp"
                             android:textStyle="bold" />
 
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
 
                     </LinearLayout>
 
@@ -308,10 +298,6 @@
                             android:textSize="17sp"
                             android:textStyle="bold" />
 
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
 
                     </LinearLayout>
 
@@ -391,11 +377,6 @@
                             android:textSize="17sp"
                             android:textStyle="bold" />
 
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
 
                     </LinearLayout>
 
@@ -469,6 +450,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:orientation="vertical">
+
                 <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                     android:id="@+id/logout"
                     style="@style/loginButton"
