--- a/Web Application/src/Home.css
+++ b/Web Application/src/Home.css
@@ -70,8 +70,14 @@ h1 {
       font-size: 1.5rem;
       font-weight: bold;
       color: #4FC3A1;
-      margin-top: 5%;
   }
+
+  .headings-spot {
+    padding-left: 6%;
+    font-size: 2rem;
+    font-weight: 200;
+    color: #4FC3A1;
+}
 
   .descriptionLeft{
     font-weight: bold;
